# torch-pyodide

./: .gitignore  .gitmodules  .yamllint.yaml  AGENTS.md  AUTOGRAD_IMPLEMENTATION.md  README.md  package-lock.json  package.json
python/: README.md  pyproject.toml
python/compatibility/: gen_report.py  registry.json  report.json  report.md  report.py
python/examples/: training_loop_example.py
python/tests/: conftest.py  test_autograd.py  test_autograd_broadcast_grad_reduction.py  test_autograd_bugfixes.py  test_autograd_engine_frame_fallback.py  test_autograd_grad_fixes.py  test_creation_api.py  test_distributions_api.py  test_distributions_completeness.py  test_fase12_8_layers.py  test_fase12_9_embedding_gpu.py  test_fft_completeness.py  test_linalg_completeness.py  test_lr_scheduler.py  test_new_ops_api.py  test_nn_submodules_import.py  test_optim_completeness.py  test_public_api_signature_parity.py  test_public_import_regression.py  test_submodule_import_does_not_leak_torch.py  test_tensor_srp_refactor.py  test_tensor_utils.py  test_torch_contract.py  validate_playground_examples.py
python/torch/: __init__.py  _api_creation.py  _autograd.py  _complex.py  _einsum_impl.py  _runtime.py  _save.py  _tensor.py  _tensor_indexing.py  _tensor_linalg_py.py  _tensor_math_helpers.py  _tensor_runtime_bridge.py  _tensor_shape_ops.py  _version.py  autograd.py  autograd_engine.py  autograd_rules.py  cuda.py  grad_mode.py  tensor_backward_ops.py  tensor_factories_ops.py  tensor_nn_ops.py  tensor_ops.py  tensor_shape_utils.py
python/torch/distributions/: __init__.py  constraints.py  distributions.py  multivariate.py  transforms.py  univariate.py  utils.py
python/torch/fft/: __init__.py
python/torch/jit/: __init__.py
python/torch/linalg/: __init__.py
python/torch/nn/: __init__.py  functional.py  init.py  modules.py  multihead_attention.py  rnn.py  transformer.py
python/torch/nn/utils/: __init__.py
python/torch/optim/: __init__.py  lr_scheduler.py
python/torch/special/: __init__.py
runtime/: package.json  (+8 more)
(+158 files in other folders)
