[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-pyodide"
version = "0.0.17"
description = "PyTorch-compatible module with autograd, runtime-backed backprop, multi-operand einsum, advanced DataLoader, reflect/replicate/circular padding, float16/bfloat16, and 11 new playground examples — via Pyodide + WebGPU."
requires-python = ">=3.11"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/celsowm/torch-pyodide"
Repository = "https://github.com/celsowm/torch-pyodide"

[tool.setuptools]
packages = { find = { include = ["torch", "torch.*"] } }
