[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-pyodide"
version = "0.0.18"
description = "PyTorch-compatible module with autograd, runtime-backed backprop, multi-operand einsum, advanced DataLoader, reflect/replicate/circular padding, float16/bfloat16, gradient clipping, and 11 init functions — via Pyodide + WebGPU."
requires-python = ">=3.11"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/celsowm/torch-pyodide"
Repository = "https://github.com/celsowm/torch-pyodide"

[tool.setuptools]
packages = { find = { include = ["torch", "torch.*"] } }
