[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torch-pyodide"
version = "0.0.46"
description = "PyTorch-compatible module with autograd, interpolate/upsample, pooling 1D, loss modules, gradient clipping, nn.init, ModuleList, and float16/bfloat16 — via Pyodide + WebGPU."
requires-python = ">=3.11"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/celsowm/torch-pyodide"
Repository = "https://github.com/celsowm/torch-pyodide"

[tool.setuptools]
packages = { find = { include = ["torch", "torch.*"] } }
